<resources>
    <string name="app_name">ScytheMobile</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string-array name="map_filter_tabs">
        <item>Workers</item>
        <item>Mechs</item>
        <item>Heroes</item>
        <item>Buildings</item>
        <item>Resources</item>
        <item>Other</item>
    </string-array>
    <string-array name="objectives">
        <item>Control at least 3 mountain territories at the end of your turn.</item>
        <item>Control at least 3 tunnels at the end of your turn.</item>
        <item>Control at least 3 farm territories at the end of your turn.</item>
        <item>Control at least 3 tundra territories at the end of your turn.</item>
        <item>Control the factory at the end of your turn and have the highest power of any player(ties are ok).</item>

        <item>Force an opponent\'s worker to retreat and still have at least 7 power.</item>
        <item>Have 1 Factory Card, at least 1 mech, and no more than 3 workers.</item>
        <item>Have $2 or less, at least 4 workers, and at least 7 popularity.</item>
        <item>Control a territory with at least 9 resource tokens (at least 1 of each type) on it at the end of your turn.</item>
        <item>Control at least 3 forest territories at the end of your turn.</item>

        <item>Control at least 3 village territories at the end of your turn.</item>
        <item>Have at least $20 at the end of your turn.</item>
        <item>Have at least 6 of your tokens (i.e. character, workers, mechs, and structures) on 1 territory.</item>
        <item>Have at least 1 upgrade, 1 mech, 1 structure, 1 recruit, and 1 of each resource at the end of your turn.</item>
        <item>Have the same number of workers and recruits.</item>

        <item>Control a territory with your character, exactly 1 mech, exactly 1 worker, and at least 5 resources at the end of your turn.</item>
        <item>Have 0 Factory cards and control at least 2 territories adjacent to the Factory at the end of your turn.</item>
        <item>Have 0 power, at least 13 popularity, and at least 5 workers.</item>
        <item>Control at least 5 territories surrounding the same lake at the end of your turn.</item>
        <item>Build at least 3 structures, have at least 7 popularity, and have 0 mechs.</item>

        <item>Control at least 9 tokens of the same resource at the end of your turn.</item>
        <item>Have 1 Factory card and 0 upgrades.</item>
        <item>Have 8 or more combat cards in hand and at least 1 combat victory star.</item>
        <item>Have at least 5 workers on a territory adjacent to the Factory at the end of your turn.</item>
        <item>Have 3 or less popularity, at least 13 power, and at least 2 mechs.</item>

        <item>Control at least 1 of each primary terrain type with at least 1 worker on each at the end of your turn.</item>
        <item>Build at least 3 structures, none of which are adjacent to your home base.</item>
    </string-array>
    <string-array name="objective_names">
        <item>Higher Ground Advantage</item>
        <item>Underworld Advantage</item>
        <item>Harvest Advantage</item>
        <item>Northern Advantage</item>
        <item>King of the Hill</item>

        <item>Send One Back as a Warning</item>
        <item>Machine Over Muscle</item>
        <item>Roll Up Your Sleeves with the Common Man</item>
        <item>Stockpile for the Winter</item>
        <item>Woodland Advantage</item>

        <item>Population Advantage</item>
        <item>Get Rich or Cry Trying</item>
        <item>Foundations of the Empire</item>
        <item>Hedge Your Bets</item>
        <item>Balanced Workforce</item>

        <item>A Wolf Among the Sheep</item>
        <item>Divide and Conquer</item>
        <item>Become a Beloved Pacifist</item>
        <item>Shore Up the Shore</item>
        <item>Create a Permanent Foothold</item>

        <item>Monopolize the Market</item>
        <item>Technological Breakthrough</item>
        <item>Achieve Tactical Mastery</item>
        <item>Establish a Human Shield</item>
        <item>Become a Despised Warmonger</item>

        <item>Diversify Production</item>
        <item>Build a Local Infrastructure</item>
    </string-array>
    <string-array name="capital_resources">
        <item>Power</item>
        <item>Popularity</item>
        <item>Coins</item>
        <item>Combat Cards</item>
    </string-array>
    <string-array name="natural_resources">
        <item>Wood</item>
        <item>Food</item>
        <item>Oil</item>
        <item>Metal</item>
    </string-array>
    <string-array name="encounter_popular_option">
        <item>WHISTLE WHILE YOU WAIT FOR THE GEESE TO CROSS THE ROAD: Gain $2 and 1 popularity.</item>
        <item>TAKE ORDERS FROM YOUR SUPERIOR OFFICER WITH HUMILITY: Gain 1 combat card and 1 popularity.</item>
        <item>HERD THE SHEEP ON THE HILLSIDE FOR AN AFTERNOON: Gain 2 food and 1 popularity.</item>
        <item>TAKE PHOTOS FOR THE OVERLY ENTHUSIASTIC SOLDIERS: Gain 2 metal and 1 popularity.</item>
        <item>GO FISHING WITH THE SOLDIERS BY POSING AS LOCALS: Gain 2 food and gain 1 popularity.</item>
        <item>LET THE BEARS FROLIC TOGETHER IN THE SNOW: Gain $2 and 1 popularity.</item>
        <item>PAY YOUR RESPECTS AS YOU PASS THROUGH THE NORDIC CAMP: Gain 2 oil and 1 popularity</item>
        <item>PET THE REINDEER AND FLIRT WITH THE LOCALS AT THE REFINERY: Gain $2 and 1 popularity.</item>
        <item>HELP AN INVENTOR INSTALL A HEAVY GEAR: Gain 2 oil and 1 popularity.</item>
        <item>STEER THE DISORIENTED MECH THROUGH THE FOG WITH YOUR LANTERN: Gain 2 oil and 1 popularity.</item>

        <item>PICK FRUIT FOR THE LADY… AND KEEP A FEW FOR YOURSELF: Gain 2 food and 1 popularity.</item>
        <item>KNOCK DOWN A TREE TO HELP THE WORKERS WITH THEIR DAILY QUOTA: Gain 2 wood and 1 popularity</item>
        <item>ENJOY AN AFTERNOON FESTIVAL WITH THE COMMONERS: Gain $2 and 1 popularity.</item>
        <item>REPAIR A BROKEN FENCE TO SECURE THE PIGS: Gain 2 food and 1 popularity.</item>
        <item>TAKE A RIDE ON A FERRY AS THE WIND TUSSLES YOUR LONG, FLOWING HAIR: Gain 2 popularity.</item>
        <item>PLANT CROPS AT A FARM FOR A DAY TO EARN SOME GOODWILL: Gain 2 food and 1 popularity.</item>
        <item>ADMIRE A RETIRED SOLDIER\’S PRIZED GUN: Gain 1 combat card and 1 popularity.</item>
        <item>SHOOT A WILD BOAR FOR A LUNCH OF BACON: Gain 2 food and 1 popularity.</item>
        <item>SHARE SOME GOOD NEWS FROM HOME WITH THE TRAVELERS: Gain $2 and 1 popularity.</item>
        <item>OBSERVE A CHILDHOOD GAME OF WAR: Gain 1 combat card and 1 popularity.</item>

        <item>DISTRACT THE ROGUE MECH WITH YOUR YODELING SKILLS TO SAVE THE COW: Gain 2 popularity.</item>
        <item>OFFER SOME ADVICE TO FIX A BROKEN PULLEY AT A DEFUNCT MINE: Gain $2 and 1 popularity.</item>
        <item>TAMPER WITH THE DRAFT DOCUMENTS TO KEEP THE FAMILY TOGETHER: Gain $2 and 1 popularity.</item>
        <item>CONCEIVE A PLAN WITH THE PATROLLING TROOPS IN THE FOREST: Gain 1 combat card and gain 1 popularity.</item>
        <item>SALVAGE AMMO FROM A SECRET UNDERGROUND FACILITY: Gain 2 power and 1 popularity.</item>
        <item>ARMWRESTLE A BRUTE AT THE LOCAL TAVERN: Gain 2 power and 1 popularity.</item>
        <item>HELP AN ANXIOUS FARMER FIND A MISSING PART FOR HIS MECH: Gain $2 and 1 popularity.</item>
        <item>GIVE THE NEWLY RECRUITED SOLDIER A LIFT TO HIS NEW ASSIGNMENT: Gain $2 and 1 popularity.</item>
        <item>TELL A GROUP OF SOLDIERS A FUNNY STORY WHILE THEY EAT LUNCH: Gain $2 and 1 popularity.</item>
        <item>SHOW THE FARMER THE CONTROL YOU HAVE OVER YOUR ANIMAL: Gain 2 power and 1 popularity.</item>

        <item>CLEAR UPROOTED TREES AFTER THE BATTLE IS OVER: Gain 2 wood and 1 popularity.</item>
        <item>CREATE AN ALLIANCE WITH THE TOWN MAYOR: Gain $2 and 1 popularity.</item>
        <item>BEFRIEND THE SAMURAI FROM A FARAWAY LAND: Gain $2 and 1 popularity.</item>
        <item>POINT THE TRAVELING CONVOY IN THE RIGHT DIRECTION: Gain $2 and 1 popularity.</item>
        <item>AS THE LADY POINTS AT YOU ACCUSINGLY, HAVE YOUR ANIMAL COMPANION POINT AT THE NEARBY HUNTER TO BREAK THE TENSION: Gain 2 popularity.</item>
        <item>OFFER TO TRANSLATE FOR THE LOCALS AND THE SOLDIERS: Gain 2 oil and 1 popularity.</item>
        <item>URGE THE PAIR OF LONG-LOST LOVERS TO REUNITE: Gain 2 popularity.</item>
        <item>QUIETLY WATCH THE FISHERMAN FROM ACROSS THE LAKE: Gain 2 popularity.</item>
        <item>STEER THE MECHS AWAY FROM THE ELECTRIC LINES: Gain 2 food and 1 popularity.</item>
        <item>REASSURE THE YOUNG LAD THAT THE ARMY IS JUST PASSING THROUGH: Gain 1 combat card and 1 popularity.</item>

        <item>TAKE A WALK IN THE WOODS WITH THE BRIGADE: Gain 2 power and 1 popularity.</item>
        <item>USE YOUR MECH\’S HEADLIGHTS TO GUIDE THE AIRSHIP THROUGH THE THICK CLOUDS: Gain $2 and 1 popularity.</item>
    </string-array>
    <string name="menu_start">Start</string>
    <string name="menu_upgrade">Upgrade</string>
    <string name="menu_deploy">Deploy</string>
    <string name="menu_enlist">Enlist</string>
    <string name="menu_build">Build</string>
    <string name="menu_trade">Trade</string>
    <string name="menu_move">Move</string>
    <string name="menu_produce">Produce</string>
    <string name="menu_bolster">Bolster</string>
</resources>